--- a/css/app.css
+++ b/css/app.css
@@ -32,3 +32,9 @@ span.student-name {
   color: #eee;
   cursor: not-allowed;
 }
+
+.student:last-child button.move-down {
+  background-color: #ddd;
+  color: #eee;
+  cursor: not-allowed;
+}
